// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currently out should display toCity when toAgencyDescription is not set  1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder=""
      />
    </GridCol>
  </GridRow>
  <table
    className="currently-out"
  >
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width10"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder=""
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width10"
        >
          Location
        </th>
        <th
          className="straight width10"
        >
          Incentive Level
        </th>
        <th
          className="straight width15"
        >
          Flags
        </th>
        <th
          className="straight width10"
        >
          Current location
        </th>
        <th
          className="straight width15"
        >
          Comment
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="G000GG"
      >
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="G000GG"
          >
            <OffenderImage
              offenderNo="G000GG"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="G000GG"
          >
            <OffenderName
              firstName="FirstName"
              lastName="LastName"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          G000GG
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate
            isoDate="1960-12-31"
          />
        </td>
        <td
          className="row-gutters"
        >
          <Connect(Location)
            location="MDI-1-3-017"
          />
        </td>
        <td
          className="row-gutters"
        />
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category="C"
            offenderNo="G000GG"
          />
        </td>
        <td
          className="row-gutters"
        >
          York
        </td>
        <td
          className="row-gutters"
        >
          Comment text
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`Currently out should render the page 1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder=""
      />
    </GridCol>
  </GridRow>
  <table
    className="currently-out"
  >
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width10"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder=""
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width10"
        >
          Location
        </th>
        <th
          className="straight width10"
        >
          Incentive Level
        </th>
        <th
          className="straight width15"
        >
          Flags
        </th>
        <th
          className="straight width10"
        >
          Current location
        </th>
        <th
          className="straight width15"
        >
          Comment
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="G000GG"
      >
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="G000GG"
          >
            <OffenderImage
              offenderNo="G000GG"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="G000GG"
          >
            <OffenderName
              firstName="FirstName"
              lastName="LastName"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          G000GG
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate
            isoDate="1960-12-31"
          />
        </td>
        <td
          className="row-gutters"
        >
          <Connect(Location)
            location="MDI-1-3-017"
          />
        </td>
        <td
          className="row-gutters"
        />
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category="C"
            offenderNo="G000GG"
          />
        </td>
        <td
          className="row-gutters"
        >
          To Agency Description
        </td>
        <td
          className="row-gutters"
        >
          Comment text
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;
